fix(Message): add z-index for message actions

--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -82,6 +82,7 @@
   top: -18px;
   right: var(--message-horizontal-padding);
   display: none;
+  z-index: var(--z-index-message-actions);
 }
 
 .clickable {
