--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -43,6 +43,7 @@
   --z-index-toolbar: calc(var(--z-index-chat) + 1);
   --z-index-sidebar-unread: 20;
   --z-index-connection-status: 10;
+  --z-index-message-actions: 10;
   /* Colors */
   --color-primary: var(--purple-two);
   --color-success: var(--medium-green);
